# Social-Network

./: CMakeLists.txt  README.md  config.json  main.cpp
Checking/: MyException.h  Tests.cpp  Tests.h  ValidatorEvent.h  ValidatorFriendship.h  ValidatorMessage.h  ValidatorUser.h  testBst.csv
Data/: events.csv  friendships.csv  messages.csv  user.csv
Domain/: BST.h  Event.cpp  Event.h  Friendship.cpp  Friendship.h  List.h  Message.cpp  Message.h  User.cpp  User.h
Repository/: BstRepositoryFile.h  RepositoryFile.h  RepositoryFileCSV.h  RepositoryFileTXT.h  parseConfig.h
Service/: EventService.cpp
UserInterface/: UserInterface.cpp  UserInterface.h
